nldl_derive/tests/ui/deserializable/derive-on-struct-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/deserializable/derive-on-struct-fails.rs:1:28
  |
1 | #[derive(Debug, PartialEq, nldl::attr::Deserialize)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: nldl::attr::Deserialize derive may only be used on enums.
